<resources>
    <string name="nombre_aplicacion">MocMoc</string>
    <string name="activiti1_name">MocMoc</string>
    <string name="activiti2_name">Inicio Sesion</string>
    <string name="activiti3_name">Registro</string>
    <string name="fragment1_name">Publicar</string>
    <string name="fragment2_name">Buscar</string>
    <string name="fragment3_name">Mis Viajes</string>
    <string name="fragment4_name">Chatear</string>
    <string name="action_closesession">Cerrar sesión</string>
    <string name="section_format">Estás en: %1$d</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_newuser">Elige un nombre de usuario</string>
    <string name="hint_newpass">Escribe una contraseña</string>
    <string name="hint_newmail">Escribe tu e-mail</string>
    <string name="hint_origen">Seleccione origen</string>
    <string name="hint_destino">Seleccione destino</string>
    <string name="hint_precio">Ej: 5</string>
    <string name="txt_origen">Origen:</string>
    <string name="txt_destino">Destino:</string>
    <string name="txt_fecha">Fecha:</string>
    <string name="txt_hora">Hora:</string>
    <string name="txt_precio">Precio:</string>
    <string name="txt_plazas">NºPlazas:</string>
    <string name="txt_euro"> €</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_publicar">Publicar</string>
    <string name="auth_failed">Ha ocurrido un fallo</string>
    <string name="mail_failed">El formato del e-mail no es correcto</string>
    <string name="mail_exist">El mail ya está registrado</string>
    <string name="mail_no_existe">Este email no está registrado</string>
    <string name="auth_incorrect">Contraseña incorrecta</string>
    <string name="toast_sin_login">Iniciar sesión previamente</string>
    <string name="snackbar_sin_implementar">Botón pendiente de implementar</string>
    <string name="toast_campos_vacios">Se deben rellenar todos los campos</string>
    <string name="toast_usuario_creado">El usuario se ha creado correctamente</string>
    <string name="toast_pwd_incorrecta">La contraseña no puede tener menos de 6 caracteres</string>
    <string name="publicacion_enviada">Tu viaje se ha publicado correctamente</string>
    <string name="msg_sin_registro">Si no estas registrado pulsa aquí</string>
    <string name="rellene_los_campos">Por favor, rellena todos los campos</string>
    <string name="info_conductor">Conductor</string>
    <string name="info_cond_nombre">Nombre</string>

    <string name="info_viaje">Viaje</string>
    <string name="info_viaje_origen">Origen:</string>
    <string name="info_viaje_destino">Destino:</string>
    <string name="info_viaje_fecha">Fecha:</string>
    <string name="info_viaje_hora">Hora:</string>
    <string name="info_viaje_precio">Precio:</string>
    <string name="info_viaje_plazas">Plazas:</string>
    <string name="reservar_btn_reservar">¡Reservar!</string>
    <string name="hint_chat">Input</string>
    <string name="lat_abierto">Abierto</string>
    <string name="lat_cerrado">Cerrado</string>
    <string name="check_credenciales">Guardar mis credenciales</string>
    <string name="archivo_preferencias_key">com.jjv.proyectointegradorv1.CREDENCIALES</string>
    <string name="valora_viaje">Valora este viaje</string>
    <string name="cancel_reserva_btn_cancl_reservar">CANCELAR RESERVA</string>
    <string name="cancel_viaje_btn_cancl_viaje">CANCELAR VIAJE</string>
    <string name="si">"Sí"</string>
    <string name="Cancelar">Cancelar</string>
    <string name="pregunta_cancelar_alert_dialog">¿Borrar viaje?</string>
    <string name="cancelar_reserva_alert_dialog_msg">Esta acción puede afectar a más usuarios.\n¿Estás seguro que quieres eliminar el viaje?</string>
    <string name="publicacion_eliminada">Viaje eliminado</string>

    <string name="fotoperfil">Foto de Perfil</string>
    <string name="txt_camara">Cámara</string>
    <string name="txt_galeria">Galeria</string>
    <string name="selectPicture">Selecione imagen</string>
    <string name="perfil">Perfil</string>
    <string name="salir">Salir</string>
    <string name="info">Información</string>
    <string name="contacto">Contáctanos</string>

    <string name="contacto_hint">¿Duda, queja, error o simplemente decirnos lo mucho que te gusta la app? ¡Ponlo aquí!</string>
    <string name="titulo_filtro">Filtrar búsqueda</string>
    <string name="hint_precioMaximo">Precio máximo</string>
    <string name="hint_conductorBuscar">Conductor</string>
    <string name="Filtrar">Filtrar</string>
    <string name="falloNumero">Introduce un precio correcto</string>
    <string name="sinResultados">Sin resultados posibles</string>

    <string name="nick_chat">Chateando como:</string>
    <string name="chat_hint">Escribe tu mensaje</string>
    <string name="yaReservado">¡VIAJE YA RESERVADO!</string>
    <string name="mensajeParaEnviarnos">Escribe algún mensaje para mandarnos</string>
    <string name="mensajeConfirmacion">Mensaje enviado, ¡Gracias!</string>
    <string name="txt_subtitle">Dejate llevar</string>

    <string name="btn_actualizar_perfil">Actualizar</string>

    <string name="alert_info_title">Información</string>
    <string name="chat_enviar">ENVIAR</string>
    <string name="sala_viaje">Sala de tu viaje</string>
    <string name="plazas_card">Plazas:</string>
    <string name="app_version">Versión %s</string>
    <string name="info_creacion">Creado por:</string>
    <string name="msg_dialog_salir">¿Seguro que quieres salir?</string>
    <string name="no">No</string>


</resources>
