<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:hint="@string/hint_user"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"/>
    />
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_filtro"
            android:title="@string/titulo_filtro" />


        <item
            android:id="@+id/drawer_perfil"
            android:title="@string/perfil"
            android:icon="@drawable/ic_perfil" />

        <item
            android:id="@+id/drawer_contacto"
            android:title="@string/contacto"
            android:icon="@drawable/ic_contacto" />

        <item
            android:id="@+id/drawer_info"
            android:title="@string/info"
            android:icon="@drawable/ic_info"/>

        <item
            android:id="@+id/drawer_salir"
            android:title="@string/salir"
            android:icon="@drawable/ic_salir"/>
    </group>

</menu>