<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UI.Register">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:id="@+id/txt_newmail"
        android:textAlignment="center"
        android:hint="@string/hint_newmail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/txt_newmail"
        android:layout_alignStart="@+id/txt_newmail"
        android:id="@+id/txt_newuser"
        android:textAlignment="center"
        android:hint="@string/hint_newuser" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/txt_newuser"
        android:layout_alignStart="@+id/txt_newuser"
        android:id="@+id/txt_newPass"
        android:textAlignment="center"
        android:hint="@string/hint_newpass" />

    <Button
        android:text="@string/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_registro"
        android:layout_below="@+id/txt_newPass"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp"
        android:onClick="registrar" />
</RelativeLayout>
