<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="470dp"
    android:background="@android:color/white"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:layout_marginBottom="@dimen/reservar_headers_inf"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_weight="1.09">
                <TextView
                    android:text="@string/info_conductor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_conductor_misviajes"
                    android:textSize="20sp"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:textStyle="normal|bold" />


                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="@dimen/img_w"
                    android:layout_height="@dimen/img_h"
                    android:layout_gravity="center"
                    app:cardCornerRadius="37.5dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:background="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/iv_usuario_misviajes"
                        android:src="@drawable/common_google_signin_btn_icon_dark_focused"/>
                </android.support.v7.widget.CardView>

                <TextView
                    android:text="@string/info_cond_nombre"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_cond_nombre_misviajes"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textStyle="normal|bold" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:text="@string/info_viaje"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_viaje_misviajes"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:layout_marginBottom="@dimen/reservar_elems_inf"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/appbar_padding_top">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/info_viaje_origen"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:id="@+id/tv_viaje_origen_misviajes"
                    android:textAlignment="center" />

                <TextView
                    android:text="@string/info_viaje_destino"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:id="@+id/tv_viaje_destino_misviajes"
                    android:layout_weight="1"
                    android:textAlignment="center" />

                <TextView
                    android:text="@string/info_viaje_plazas"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:id="@+id/tv_plazas_misviajes"
                    android:textAlignment="center" />

                <TextView
                    android:text="@string/info_viaje_precio"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_viaje_precio_misviajes"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:layout_weight="1"
                    android:textAlignment="center" />

                <TextView
                    android:text="@string/info_viaje_hora"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_viaje_hora_misviajes"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:textAlignment="center" />

                <TextView
                    android:text="@string/info_viaje_fecha"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_viaje_fecha_misviajes"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:id="@+id/tv_origen_res_misviajes"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:id="@+id/tv_destino_res_misviajes"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:id="@+id/tv_plazas_res_misviajes"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:id="@+id/tv_precio_res_misviajes"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/reservar_elems_inf"
                    android:id="@+id/tv_viaje_hora_res_misviajes"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_viaje_fecha_res_misviajes"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="@string/cancel_viaje_btn_cancl_viaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:textColor="@android:color/white"
        android:id="@+id/btn_cancelar_viaje"
        android:layout_alignParentBottom="true" />

</RelativeLayout>